--- a/api/qsharp/microsoft.quantum.simulation.timedependenttrottersimulationalgorithm.yml
+++ b/api/qsharp/microsoft.quantum.simulation.timedependenttrottersimulationalgorithm.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.simulation.timedependenttrottersimulationalgorithm
 name: TimeDependentTrotterSimulationAlgorithm
 type: function
 namespace: Microsoft.Quantum.Simulation
-summary: '`TimeDependentSimulationAlgorithm` 函数，该函数使用 Trotter – Suzuki 分解来估算求解依赖于时间的 Schrodinger 公式的单一运算符。'
+summary: '`TimeDependentSimulationAlgorithm`使用 Trotter – Suzuki 分解来估算求解依赖于时间的 Schrodinger 公式的单一运算符的函数。'
 syntax: 'function TimeDependentTrotterSimulationAlgorithm (trotterStepSize : Double, trotterOrder : Int) : Microsoft.Quantum.Simulation.TimeDependentSimulationAlgorithm'
 input:
   content: '(trotterStepSize : Double, trotterOrder : Int)'
@@ -22,9 +22,9 @@ output:
   - summary: '`TimeDependentSimulationAlgorithm` 类型。'
     uid: microsoft.quantum.simulation.timedependentsimulationalgorithm
 metadata:
-  ms.openlocfilehash: dbac8ac91d7145216f9594f26e443f3a2660831e
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 3dc5c7a7037be2b30dfdc3b7eb7c5d32d2f9b4c5
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73065242"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82687253"
