--- a/api/qsharp/microsoft.quantum.math.modulusi.yml
+++ b/api/qsharp/microsoft.quantum.math.modulusi.yml
@@ -3,8 +3,8 @@ uid: microsoft.quantum.math.modulusi
 name: ModulusI
 type: function
 namespace: Microsoft.Quantum.Math
-summary: 计算 `value` 取模 `modulus`的规范 residue。
-remarks: '此函数的行为与 `%` 运算符在和 Q # C#中的行为方式的行为不同，结果中始终为介于0到 `modulus - 1`之间的正整数，即使值为负。'
+summary: 计算`value`模`modulus`的规范 residue。
+remarks: '此函数的行为方式与运算符`%`在 c # 和 Q # 中的行为方式相同，因为结果中始终是一个介于`modulus - 1`0 到之间的正整数，即使值为负。'
 syntax: 'function ModulusI (value : Int, modulus : Int) : Int'
 input:
   content: '(value : Int, modulus : Int)'
@@ -20,13 +20,13 @@ input:
 output:
   content: Int
   types:
-  - summary: 0到 `value - r` `modulus - 1` 之间的整数 $r
+  - summary: 0之间的`value - r`整数 $r $ `modulus - 1` ，这可被模数整除
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 1bb3877b4d66b5ad09dabbc072d7d9fb61813745
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: d804caa4e5eba1e8d6293d33164255ea4768900c
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73212083"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82686640"
