--- a/api/qsharp/microsoft.quantum.math.negationi.yml
+++ b/api/qsharp/microsoft.quantum.math.negationi.yml
@@ -15,13 +15,13 @@ input:
 output:
   content: Int
   types:
-  - summary: '`input`的一元求反。'
+  - summary: 的一元求反`input`。
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 6eb696cf6e1a8228151e0e3f8dd28f054832b47b
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 322f03582958e7acb05afe0f77516771fd570ae4
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73211386"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82686566"
