--- a/api/qsharp/microsoft.quantum.preparation.statepreparationcomplexcoefficients.yml
+++ b/api/qsharp/microsoft.quantum.preparation.statepreparationcomplexcoefficients.yml
@@ -13,9 +13,9 @@ summary: >-
   新分配的寄存器上的 U 操作由 $ $ \begin{align} U\ket {0 ... 0} = \ket{\psi} = \frac{\ sum_ {j = 0} ^ {2 ^ n-1} r_j e ^ {i t_j} \ket{j}}{\sqrt{\ sum_ {j = 0} ^ {2 ^ n-1} | r_j | ^ 2}}。
 
   \end{align} $ $
-remarks: 负的输入系数 $r 将被视为值为 $ | r_j | $ 的 _j < $0。 如果指定了小于 $ 2 ^ n $ 的元素 $ （r_j，t_j） = （0.0，0.0） $，则 `coefficients` 将填充。
+remarks: 负的输入系数 $r 将被视为值为 $ | r_j | $ 的 _j < $0。 `coefficients`如果指定的元素为 $ （r_j、t_j） = （0.0，0.0） $，则将用元素填充。
 examples: >-
-  以下代码片段在 qubit register `qubitsLE`中准备好量程状态 $ \ket{\psi} = e ^ {i 0.1} \ sqrt {1/8} \ 票证{0}+ \ sqrt {7/8} \ 票证{2}$。
+  以下代码片段在 qubit 注册{0}{2} `qubitsLE`中准备好量程状态 $ \ket{\psi} = e ^ {i 0.1} \ sqrt {1/8} \ 票证 + \ sqrt {7/8} \ 票证 $。
 
 
   ```qsharp
@@ -62,9 +62,9 @@ output:
     - Adjoint
     - Controlled
 metadata:
-  ms.openlocfilehash: 42049c1ef8c1210bf31a9979a2a6d4d9223a9c85
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: d42ff528c40346ddb5a487ca68c70544cac20aeb
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73226397"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82686476"
