--- a/api/qsharp/microsoft.quantum.simulation.blockencodingtoreflection.yml
+++ b/api/qsharp/microsoft.quantum.simulation.blockencodingtoreflection.yml
@@ -4,33 +4,33 @@ name: BlockEncodingToReflection
 type: function
 namespace: Microsoft.Quantum.Simulation
 summary: >-
-  将 `BlockEncoding` 转换为等效 `BLockEncodingReflection`。
+  `BlockEncoding`将转换为等效`BLockEncodingReflection`的。
 
 
-  也就是说，假设有一个 `BlockEncoding` 单一 $U $，该运算符对某个运算符 $H "重要" 进行编码，然后将其转换为对同一运算符进行编码的 `BlockEncodingReflection` $U $，同时还满足 $U "^ \dagger = U" $。
+  也就是说，假设有一个`BlockEncoding`用于对某个运算符进行编码的单一 $U $ $H $ 相关，则将`BlockEncodingReflection`其转换为对同一运算符进行编码的 $U $，同时满足 $U "^ \dagger = U" $。
 
   这会将 $U $ 的辅助寄存器大小增加了一个 qubit。
 remarks: 这会将 $U $ 的辅助寄存器大小增加了一个 qubit。
 syntax: 'function BlockEncodingToReflection (blockEncoding : Microsoft.Quantum.Simulation.BlockEncoding) : Microsoft.Quantum.Simulation.BlockEncodingReflection'
-references: '- Hamiltonian 模拟 by Qubitization Guang 脱离 Hao Low、Isaac 语 https://arxiv.org/abs/1610.06546'
+references: '- Hamiltonian 模拟 by Qubitization Guang 脱离 Hao Low、Isaac 语https://arxiv.org/abs/1610.06546'
 input:
   content: '(blockEncoding : Microsoft.Quantum.Simulation.BlockEncoding)'
   types:
   - name: blockEncoding
-    summary: '`BlockEncoding` 单一 $U $ 可转换为反射。'
+    summary: 要`BlockEncoding`转换为反射的单一 $U $。
     uid: microsoft.quantum.simulation.blockencoding
 output:
   content: Microsoft.Quantum.Simulation.BlockEncodingReflection
   types:
-  - summary: 单一 $U ' $ 共同作用于寄存器 `a` 和 `s`，并 $H $，并满足 $U ' ^ \dagger = U ' $。
+  - summary: 单一 $U ' $ 共同操作寄存器`a`并`s`对其进行块编码 $H $，并满足 $U ^ \dagger = U ' $。
     uid: microsoft.quantum.simulation.blockencodingreflection
 seeAlso:
 - microsoft.quantum.canon.blockencoding
 - microsoft.quantum.canon.blockencodingreflection
 metadata:
-  ms.openlocfilehash: 47eba3c59ef30f89139830aa4d9b98d22d141d8f
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: e656a5ab9e187660a20420049374380ef9726647
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73065616"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82686922"
