commit translated contents

--- a/api/qsharp/microsoft.quantum.simulation.timedependentsimulationalgorithm.yml
+++ b/api/qsharp/microsoft.quantum.simulation.timedependentsimulationalgorithm.yml
@@ -7,14 +7,14 @@ summary: >-
   表示依赖时间的模拟算法。
 
 
-  依赖于时间的模拟技术可转换 <xref:microsoft.quantum.simulation.evolutionschedule>
+  依赖于时间的模拟技术将<xref:microsoft.quantum.simulation.evolutionschedule>
 
   用于某些时间间隔的单一时间演变。
 syntax: newtype TimeDependentSimulationAlgorithm = ((Double, Microsoft.Quantum.Simulation.EvolutionSchedule, Qubit[]) => Unit is Adj + Ctl);
 metadata:
-  ms.openlocfilehash: 0af6aa57fceb45254fa4cf13b97dad81f44fa237
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 2467e0756a80ef14461dea16f5b84d2dff74825c
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73219920"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82687278"
