--- a/api/qsharp/microsoft.quantum.simulation.sumgeneratorsystems.yml
+++ b/api/qsharp/microsoft.quantum.simulation.sumgeneratorsystems.yml
@@ -3,26 +3,26 @@ uid: microsoft.quantum.simulation.sumgeneratorsystems
 name: SumGeneratorSystems
 type: function
 namespace: Microsoft.Quantum.Simulation
-summary: 添加多个 `GeneratorSystem`来创建新 GeneratorSystem。
+summary: 添加多`GeneratorSystem`个创建新 GeneratorSystem 的。
 syntax: 'function SumGeneratorSystems (generatorSystems : Microsoft.Quantum.Simulation.GeneratorSystem[]) : Microsoft.Quantum.Simulation.GeneratorSystem'
 input:
   content: '(generatorSystems : Microsoft.Quantum.Simulation.GeneratorSystem[])'
   types:
   - name: generatorSystems
-    summary: '`GeneratorSystem[]`类型的数组。'
+    summary: 一个类型为 `GeneratorSystem[]` 的数组。
     isArray: true
     uid: microsoft.quantum.simulation.generatorsystem
 output:
   content: Microsoft.Quantum.Simulation.GeneratorSystem
   types:
-  - summary: 一个 `GeneratorSystem`，它表示作为输入生成器系统总数的系统。
+  - summary: 一个`GeneratorSystem` ，它表示作为输入生成器系统的总和的系统。
     uid: microsoft.quantum.simulation.generatorsystem
 seeAlso:
 - microsoft.quantum.canon.generatorsystem
 metadata:
-  ms.openlocfilehash: 610e6f8e49d940d70c9f0e7d15eb63298453920e
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 5474e35cb303a6f490794a77483aafd609724eaa
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73065310"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82687332"
