--- a/api/qsharp/microsoft.quantum.simulation.timedependentblockencoding.yml
+++ b/api/qsharp/microsoft.quantum.simulation.timedependentblockencoding.yml
@@ -4,20 +4,20 @@ name: TimeDependentBlockEncoding
 type: newtype
 namespace: Microsoft.Quantum.Simulation
 summary: >-
-  表示由时钟寄存器控制的 `BlockEncoding`。
+  `BlockEncoding`表示由时钟寄存器控制的。
 
 
-  也就是说，`TimeDependentBlockEncoding` 是 `d` 时钟寄存器中的状态 $ \ket{k}_d $ 控制的单一 $U $，因此，在系统注册 `s` 上操作的任意 $H _k $ 将在与辅助状态 $ \ket 相对应的左上块中进行编码{0}_a $。 那是
+  也就是说， `TimeDependentBlockEncoding`是一种由状态 $ \ket{k} _d $ 在时钟寄存器`d`中控制的单一 $U $，这样，在系统寄存器`s`上操作的任意 $H _k $ 就会在对应于辅助状态 $ \ket{0}_a $ 的左上块中进行编码。 即：
 
 
-  $ $ \begin{align} （\bra{0}\_a\otimes I_ {ds}） U （\ket{0}\_a\otimes I_ {ds}） = \sum_{k}\ket{k}\bra{k}\_d\otimes H_k。
+  $ $ \begin{align} （\bra{0}\_a\otimes I_ {ds}） U （\ket{0}\_a\otimes I_ {ds}） = \ sum_ {k} \ket{k}\bra{k}\_d\otimes H_k。
 
   \end{align} $ $。
 syntax: newtype TimeDependentBlockEncoding = ((Qubit[], Qubit[], Qubit[]) => Unit is Adj + Ctl);
 metadata:
-  ms.openlocfilehash: 1f41d7592e7f031085430a42edaa341874724851
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 6a9bb3648a24eae7fd5279c4300ece7b169fb00a
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73211012"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82687307"
