--- a/articles/machines/toc.yml
+++ b/articles/machines/toc.yml
@@ -1,10 +1,10 @@
 - name: 概述
   href: index.md
-- name: 量子模拟器
+- name: 全状态模拟器
   href: full-state-simulator.md
 - name: 资源估算器
   href: resources-estimator.md
-- name: 量子计算机跟踪模拟器
+- name: 跟踪模拟器
   topicHref: qc-trace-simulator/index.md
   href: qc-trace-simulator/toc.yml
 - name: Toffoli 模拟器
