--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -11,7 +11,7 @@
         "/quantum"
       ],
       "enable_xrefmap_share": true,
-      "open_to_public_contributors": false,
+      "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
         "QSharpNamespace": "Content",
@@ -45,7 +45,7 @@
         "/dotnet"
       ],
       "enable_xrefmap_share": true,
-      "open_to_public_contributors": false,
+      "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
@@ -63,10 +63,14 @@
     "master-sxs",
     "master"
   ],
+  "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/quantum-docs-pr.zh-cn",
+  "git_repository_branch_open_to_public_contributors": "live",
   "continue_with_document_error": true,
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
-  "contribution_branch_mappings": {},
+  "contribution_branch_mappings": {
+     "live-sxs": "live"
+  },
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
